Removed console logs and added alerts

--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -15,11 +15,11 @@
     </tr>
     <tr>
     <td><label for="quantity">Quantity</label></td>
-    <td><input type="number" [(ngModel)]="quantity"></td> 
+    <td><input type="number" [(ngModel)]="quantity" min="0"></td> 
     </tr>
     <tr>
     <td><label for="price">Price</label></td>
-    <td><input type="number" [(ngModel)]="price"></td>
+    <td><input type="number" [(ngModel)]="price" min="0"></td>
     </tr>
   </table>
   <br>
