--- a/src/app/update-item/update-item.component.html
+++ b/src/app/update-item/update-item.component.html
@@ -25,7 +25,7 @@
         <div *ngFor="let item of finalItems">
             <tr>
                 <td id="id">{{item.id}}</td>
-                <td id="name"><input id="name" [(ngModel)]="item.name"></td>
+                <td id="name"><input id="name" style="text-transform:uppercase" [(ngModel)]="item.name"></td>
                 <td id="price"><input id="inp" [(ngModel)]="item.price" type="number" min="0"></td>
                 <td id="quantity">{{item.quantity}}</td>
                 <td id="sold"><input id="inp" [(ngModel)]="item.add" type="number" min="0"></td>
