Changing tab name from update qty to update items

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
       <a class="nav-link" routerLink="/addItem" routerLinkActive="class-name" routerLinkActiveOptions="{exact:true}">Add Items</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" routerLink="/updateItem" routerLinkActive="class-name" routerLinkActiveOptions="{exact:true}">Update Qty</a>
+        <a class="nav-link" routerLink="/updateItem" routerLinkActive="class-name" routerLinkActiveOptions="{exact:true}">Update Items</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" routerLink="/historyItem" routerLinkActive="class-name" routerLinkActiveOptions="{exact:true}">Items History</a>
